tests/sources/invalid/match/match_unknown_payload_field.fire
// Invalid: the pattern binds a field that doesn't exist on the variant.
// EXPECT: semantic error

enum Shape {
    Circle(radius: float64),
    Point
}

s: Shape = Shape.Point;
match s {
    Shape.Circle(bogus) -> { }  //~ ERROR FS-SEM-0001 @5
    Shape.Point -> { }
}
